# ClientsideDigitrecognition

./: index.html
tfjs_model/: model.json
training/: build.sh  main.py  mnist_model.h5  mnist_model.keras  model_architecture.json  pyproject.toml  resave.py  shell.nix
training/tfjs_model/: model.json
